--- a/sample.env
+++ b/sample.env
@@ -1,11 +1,11 @@
 PUPPETEER_SKIP_CHROMIUM_DOWNLOAD = true
 PUPPETEER_EXECUTABLE_PATH = /usr/bin/google-chrome-stable
-MONGODB_URI = your MONGODB_URI
+MONGODB_URI = mongodb+srv://tanujairam:tanujairam@whatsapp.yixkzgb.mongodb.net/?retryWrites=true&w=majority&appName=Whatsapp
 DEFAULT_LANGUAGE = default language to be translated to in .tr command
-BOT_NUMBER = 918051xxxxxx
-OWNER_NUMBER = 917437xxxxxx
+BOT_NUMBER = 919487362521
+OWNER_NUMBER = 916383273812
 NUMVERIFY_KEY = 13e4e196a58f64646251999692b9d006
-CHATBOT = true
+CHATBOT = false
 INSTALLATION_ID = get you trucaller installation ID from https://replit.com/@E-Venture/truecaller-installation-id?v=1
 WELCOME_MSG = Welcome to the group
 STICKER_NAME = tofu
